--- a/form.html
+++ b/form.html
@@ -130,7 +130,7 @@
                   <a href="./form.html">ADD PRODUCT</a>
                 </li>
                 <li><a href="./details.html">DETAILS</a></li>
-                <li><a href="|#">BLOG</a></li>
+                <li><a href="#">BLOG</a></li>
                 <li><a href="#">CONTACT</a></li>
               </ul>
             </nav>
