--- a/index.html
+++ b/index.html
@@ -219,175 +219,138 @@
             <div class="line"></div>
           </div>
           <div class="best-seller">
-            <div class="owl-carousel">
-                <div class="item">
-            <div class="best-card">
+            <div class="best-cards">
+              <div class="best-card">
                 <div class="card-top">
-                    <img src="./assets/images/product_1.png" alt="" />
-                    <i class="fa-regular fa-heart"></i>
-                  </div>
-                  <div class="card-content">
-                    <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                    <div class="price">
-                      <p class="new">$520.00</p>
-                      <p>$590.00</p>
-                    </div>
-                    <a href="./details.html">Read More</a>
-                  </div>
-            </div>
+                  <img src="./assets/images/product_1.png" alt="" />
+                  <i class="fa-regular fa-heart"></i>
                 </div>
-                <div class="item">
-            <div class="best-card">
+                <div class="card-content">
+                  <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
+                  <div class="price">
+                    <p class="new">$520.00</p>
+                    <p>$590.00</p>
+                  </div>
+                  <a href="./details.html">Read More</a>
+                </div>
+              </div>
+              <div class="best-card">
                 <div class="card-top">
-                    <img src="./assets/images/product_1.png" alt="" />
-                    <i class="fa-regular fa-heart"></i>
+                  <img src="./assets/images/product_1.png" alt="" />
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="card-content">
+                  <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
+                  <div class="price">
+                    <p class="new">$520.00</p>
+                    <p>$590.00</p>
                   </div>
-                  <div class="card-content">
-                    <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                    <div class="price">
-                      <p class="new">$520.00</p>
-                      <p>$590.00</p>
-                    </div>
-                    <a href="./details.html">Read More</a>
+                  <a href="./details.html">Read More</a>
+                </div>
+              </div>
+              <div class="best-card">
+                <div class="card-top">
+                  <img src="./assets/images/product_1.png" alt="" />
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="card-content">
+                  <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
+                  <div class="price">
+                    <p class="new">$520.00</p>
+                    <p>$590.00</p>
                   </div>
+                  <a href="./details.html">Read More</a>
+                </div>
+              </div>
+              <div class="best-card">
+                <div class="card-top">
+                  <img src="./assets/images/product_1.png" alt="" />
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="card-content">
+                  <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
+                  <div class="price">
+                    <p class="new">$520.00</p>
+                    <p>$590.00</p>
+                  </div>
+                  <a href="./details.html">Read More</a>
+                </div>
+              </div>
+              <div class="best-card">
+                <div class="card-top">
+                  <img src="./assets/images/product_1.png" alt="" />
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="card-content">
+                  <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
+                  <div class="price">
+                    <p class="new">$520.00</p>
+                    <p>$590.00</p>
+                  </div>
+                  <a href="./details.html">Read More</a>
+                </div>
+              </div>
+              <div class="best-card">
+                <div class="card-top">
+                  <img src="./assets/images/product_1.png" alt="" />
+                  <i class="fa-regular fa-heart"></i>
+                </div>
+                <div class="card-content">
+                  <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
+                  <div class="price">
+                    <p class="new">$520.00</p>
+                    <p>$590.00</p>
+                  </div>
+                  <a href="./details.html">Read More</a>
+                </div>
+              </div>
             </div>
-                </div>
-                <div class="item">
-                    <div class="best-card">
-                        <div class="card-top">
-                            <img src="./assets/images/product_1.png" alt="" />
-                            <i class="fa-regular fa-heart"></i>
-                          </div>
-                          <div class="card-content">
-                            <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                            <div class="price">
-                              <p class="new">$520.00</p>
-                              <p>$590.00</p>
-                            </div>
-                            <a href="./details.html">Read More</a>
-                          </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="best-card">
-                        <div class="card-top">
-                            <img src="./assets/images/product_1.png" alt="" />
-                            <i class="fa-regular fa-heart"></i>
-                          </div>
-                          <div class="card-content">
-                            <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                            <div class="price">
-                              <p class="new">$520.00</p>
-                              <p>$590.00</p>
-                            </div>
-                            <a href="./details.html">Read More</a>
-                          </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="best-card">
-                        <div class="card-top">
-                            <img src="./assets/images/product_1.png" alt="" />
-                            <i class="fa-regular fa-heart"></i>
-                          </div>
-                          <div class="card-content">
-                            <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                            <div class="price">
-                              <p class="new">$520.00</p>
-                              <p>$590.00</p>
-                            </div>
-                            <a href="./details.html">Read More</a>
-                          </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="best-card">
-                        <div class="card-top">
-                            <img src="./assets/images/product_1.png" alt="" />
-                            <i class="fa-regular fa-heart"></i>
-                          </div>
-                          <div class="card-content">
-                            <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                            <div class="price">
-                              <p class="new">$520.00</p>
-                              <p>$590.00</p>
-                            </div>
-                            <a href="./details.html">Read More</a>
-                          </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="best-card">
-                        <div class="card-top">
-                            <img src="./assets/images/product_1.png" alt="" />
-                            <i class="fa-regular fa-heart"></i>
-                          </div>
-                          <div class="card-content">
-                            <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                            <div class="price">
-                              <p class="new">$520.00</p>
-                              <p>$590.00</p>
-                            </div>
-                            <a href="./details.html">Read More</a>
-                          </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="best-card">
-                        <div class="card-top">
-                            <img src="./assets/images/product_1.png" alt="" />
-                            <i class="fa-regular fa-heart"></i>
-                          </div>
-                          <div class="card-content">
-                            <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                            <div class="price">
-                              <p class="new">$520.00</p>
-                              <p>$590.00</p>
-                            </div>
-                            <a href="./details.html">Read More</a>
-                          </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="best-card">
-                        <div class="card-top">
-                            <img src="./assets/images/product_1.png" alt="" />
-                            <i class="fa-regular fa-heart"></i>
-                          </div>
-                          <div class="card-content">
-                            <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                            <div class="price">
-                              <p class="new">$520.00</p>
-                              <p>$590.00</p>
-                            </div>
-                            <a href="./details.html">Read More</a>
-                          </div>
-                    </div>
-                </div>
-                <div class="item">
-                    <div class="best-card">
-                        <div class="card-top">
-                            <img src="./assets/images/product_1.png" alt="" />
-                            <i class="fa-regular fa-heart"></i>
-                          </div>
-                          <div class="card-content">
-                            <h4>Fujifilm X100T 16 MP Digital Camera (Silver)</h4>
-                            <div class="price">
-                              <p class="new">$520.00</p>
-                              <p>$590.00</p>
-                            </div>
-                            <a href="./details.html">Read More</a>
-                          </div>
-                    </div>
-                </div>
           </div>
         </div>
       </div>
     </section>
-    <section>
-        <div class="container">
-            
+    <section id="blog">
+      <div class="container">
+        <div class="heading">
+          <h1>LATEST BLOGS</h1>
+          <div class="line"></div>
         </div>
+        <div class="blog">
+          <div class="blog-cards">
+            <div class="blog-card">
+              <img src="./assets/images/blog_1.jpg" alt="" />
+            </div>
+            <div class="blog-card">
+              <img src="./assets/images/blog_2.jpg" alt="" />
+            </div>
+            <div class="blog-card">
+              <img src="./assets/images/blog_3.jpg" alt="" />
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
+    <footer>
+      <div class="container">
+        <div class="footer">
+          <div class="links">
+            <nav>
+              <ul>
+                <li>
+                  <a href="#">Blog</a>
+                </li>
+                <li>
+                  <a href="#">Contact Us</a>
+                </li>
+                <li><a href="#">FAQS</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="icons">
+            
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
